appId: host.exp.Exponent
---
- launchApp: host.exp.Exponent

- tapOn: GameOn

- runFlow: "teams/create-team-flow.yaml"

- runFlow: "leagues/create-league-flow.yaml"

- tapOn: Leagues

- tapOn: End2EndLeague, Canada, Forward

- tapOn: settings
- tapOn: Switch to a Public League
- assertVisible: League Publication Payment
- assertVisible: "Amount: $15.00"

- tapOn: Pay & Continue

- tapOn: Card number
- inputText: "4242424242424242"

- tapOn: expiration date

- inputText: "0129"

- tapOn: CVC
- inputText: "555"

- tapOn: Postal code

- inputText: "A1A 2B2"

- pressKey: Enter

- tapOn: Pay $15.00

- assertVisible: Payment successful
- assertVisible: Your changes have been applied.

- tapOn: End2EndLeague
- tapOn: Spaces

- tapOn: Teams
- tapOn: End2EndRunners, Soccer, Forward
- tapOn: settings

- tapOn: Switch to a Public Team
- assertVisible: Team Publication Payment
- assertVisible: "Amount: $15.00"

- tapOn: Pay & Continue

- tapOn: Card number
- inputText: "4242424242424242"

- tapOn: expiration date

- inputText: "0129"

- tapOn: CVC
- inputText: "555"

- tapOn: Postal code

- inputText: "A1A 2B2"

- pressKey: Enter

- tapOn: Pay $15.00

- assertVisible: Payment successful
- assertVisible: Your changes have been applied.

- tapOn: Delete Team

- tapOn: Delete

- tapOn: Leagues
- tapOn: End2EndLeague, Canada, Forward
- tapOn: settings
- tapOn: Delete League
- tapOn: Delete
